# edigivault-app

./: .gitignore  MANIFEST.in  README.md  copy_assets.ps1  pyproject.toml  setup.cfg  setup.py
edigivault/: hooks.py  modules.txt
edigivault/api/: portal.py
edigivault/e_digivault/: __init__.py
edigivault/edigivault/: __init__.py
edigivault/public/css/: edigivault.css  portal.css
edigivault/public/js/: edigivault.js
edigivault/www/portal/: documents.html  documents.py  estimate_detail.html  estimate_detail.py  estimates.html  estimates.py  index.html  index.py  invoices.html  invoices.py  leads.html  leads.py  payments.html  payments.py  project_detail.html  project_detail.py  projects.html  projects.py  properties.html  properties.py  services.html  services.py
