[project]
name = "edigivault"
version = "1.0.0"
description = "e-DigiVault - Digital Property Documentation & Liaisoning Platform"
authors = [{name = "Abinash", email = "abi412003@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
