[project]
name = "edigivault"
version = "1.0.0"
description = "e-DigiVault - Digital Property Documentation & Liaisoning Platform"
authors = [{name = "Abinash", email = "abi412003@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
